@@ -1,3 +1,7 @@
+2008-04-14  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/loop_address2.adb: New test.
+
 2008-04-09  Jason Merrill  <jason@redhat.com>
 
 	PR c++/35708
